# SignalProcessing

./: ANOMALY_DETECTION_GUIDE.md  DOCUMENTATION_GUIDE.md  DOXYGEN_DIAGRAMS_GUIDE.md  Doxyfile  HDF5_EXPORT_GUIDE.md  INSTALL_DOXYGEN_WINDOWS.md  ML_FEATURES_GUIDE.md  README.md  SignalProcessing.code-workspace  SignalProcessing.cpp  SignalProcessing.h  TESTING_IMPLEMENTATION.md  WEBSITE_DESCRIPTIONS.md  build.bat  docs_quick.bat  generate_docs.bat  generate_docs.sh  generate_docs_portable.bat  install_graphviz.bat  test.cpp
.github/: copilot-instructions.md
docs/: README.md
docs/html/: ANOMALY__DETECTION__GUIDE_8md.html  BACKENDS_8md.html  CONTRIBUTING_8md.html  EXAMPLES_8md.html  FAQ_8md.html  FONTS_8md.html  HDF5__EXPORT__GUIDE_8md.html  ImGuiConfig_8hpp.html  ImGuiConfig_8hpp.js  LICENSE_8md.html  (+6307 more)
examples/: .gitignore  CMakeLists.txt  ImGuiConfig.hpp  README.md  README_CONFIG.md  README_IMGUI.md  SETUP_WINDOWS.md  build.bat  build_and_run_imgui.sh  build_example.sh  build_imgui.bat  build_imgui_vs.bat  config_integration_example.cpp  example_complete.cpp  imgui_demo.cpp  read_hdf5.py  setup_imgui.bat  setup_imgui.sh
source/: SignalProcessing.cpp  SignalProcessing.h  SignalRecorder.hpp
test/: TEST_SUITE_README.md  build_correlation.bat  build_correlation.sh  build_decimation.bat  build_decimation.sh  build_denoising.bat  build_denoising.sh  build_event_detection.sh  build_frequency_analysis.bat  build_ml_downstream.bat  build_ml_downstream.sh  build_ml_features.bat  build_ml_features.sh  build_ml_h5export.bat  build_ml_h5export.sh  build_moving_average.sh  build_multi_channel_h5.sh  build_normalize.sh  build_peak_detection.sh  build_signal_recorder.sh  build_smoothing.sh  build_stats.sh  build_timestamp.sh  build_turbine_anomaly.bat  build_turbine_anomaly.sh  ecg_training_data.csv  main.cpp  multi_channel_sync.h5  pre-commit-hook.sh  quick_test.sh  read_h5_example.cpp  run_all_tests.sh  test.cpp  test.h  test_correlation.cpp  test_decimation.cpp  test_denoising.cpp  test_event_detection.cpp  test_frequency_analysis.cpp  test_ml_downstream.cpp  (+14 more)
(+159 files in other folders)
